fix aligning checkbox and new highlight answers

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require font-awesome
  *= require bootstrap-social
+ *= require callout
  *= require highlight/railscasts.min
  *= require_self
  */
@@ -52,10 +53,13 @@ ul.questions, ul.options {
 
 .correct-answer {
     color: #128023;
+    background-color: rgba(61, 234, 51, 0.2);
+    /*opacity: 0.2;*/
 }
 
 .wrong-answer {
-    color: #d9534f
+    color: #d9534f;
+    background-color: rgba(148, 19, 17, 0.2);
 }
 
 .score{
@@ -99,3 +103,17 @@ ol.options li:nth-child(odd), ul.options li:nth-child(odd) {
     /*margin-top: 10px;*/
     /*margin-left: 10px;*/
 /*}*/
+/*TODO: check selectors*/
+.convert-code-options li label{
+    display: block;
+}
+
+.convert-code-options li label pre{
+    display:inline-block;
+    vertical-align:middle;
+}
+
+.convert-code-options li label pre{
+    margin-top: 10px;
+    margin-left: 10px;
+}
